<resources>
    <string name="app_name">GuessMyVibe</string>
    <string name="soloButton">Solo</string>
    <string name="multiplayersButton">Multi joueurs</string>
    <string name="profileButton">Profil</string>
    <string name="joinRoomTextView">Entrez l\'ID de la salle</string>
    <string name="idRoomTextInputLayout">Entrez l\'ID de la salle de jeu</string>
    <string name="joinButton">Rejoindre</string>
    <string name="levelTextView">Choisir un niveau de jeu</string>
    <string name="endTextView">Partie terminée !!</string>
    <string name="pointsTextView"></string>
    <string name="easyButton">Facile</string>
    <string name="replayButton">Rejouer</string>
    <string name="hardButton">Difficile</string>
    <string name="multiTextView">Choisir une option multi-joueurs</string>
    <string name="categoryTextView">Choisir un theme de jeu</string>
    <string name="createButton">Creer une salle de jeu</string>
    <string name="popButton">Pop</string>
    <string name="country">De quel pays s\'agit-il ?</string>
    <string name="rockButton">Rock</string>
    <string name="jazzButton">Jazz</string>
    <string name="bluesButton">Blues</string>
    <string name="rapButton">Rap</string>
    <string name="frenchButton">Francais</string>
    <string name="usButton">US</string>
    <string name="seventiesButton">70\'s</string>
    <string name="eightiesButton">80\'s</string>
    <string name="ninetiesButton">90\'s</string>
    <string name="twothousandsButton">2000\'s</string>
    <string name="response1"></string>
    <string name="response2"></string>
    <string name="response3"></string>
    <string name="response4"></string>
    <string name="newRoomTextView">Bienvenue dans le salon !</string>
    <string name="joinRoomButton">Rejoindre une salle de jeu</string>
    <string name="idRoomTextView">ID de la salle : </string>
    <string name="userNameTextView">Nom d\'utilisateur</string>
    <string name="lastGamesTextView">Dernieres parties jouees</string>
    <string name="personalScoreTextView">Score : </string>
    <string name="personalDescriptionTextView">Description personnelle</string>
    <string name="login">Connexion</string>
    <string name="signup">Inscription</string>
    <string name="email">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="playButton">Jouer</string>
    <string name="confirm">Confirmez le mot de passe</string>
    <string name="informations">Remplissez le formulaire, c\'est rapide !</string>
    <string name="finished">La partie est terminée !</string>
    <string name="cliccopy">Cliquez ici pour le copier !</string>
    <string name="level">Niv.</string>
    <string name="winner">Gagnant :</string>
</resources>
